examples/errors/secrets/errors.cfg.clear
[batou]
members = 03C7E67FC9FD9364,
      306151601E813A47

[component:component1]
my_attribute = set in secrets

[component:component2]
this_also_does_not_exist = True

[component:another-nonexisting-component-section]
foo = bar
